@@ -3,6 +3,7 @@
 - @attr (from nose.plugins.attrib) can now be used as a class decorator (#292)
 - Fixed problems with SkipTest in Python 3.2 (#389)
 - Fixes Xunit plugin to handle non-UTF8 characters (#395)
+- Makes --plugins more succinct when there are no options (#235)
 
 1.0.0
 
